work on landing page

--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -2,22 +2,61 @@
 title: Home
 content_blocks:
   - _bookshop_name: hero
-    title: Hi, ich bin WorkWithLizz
+    title: Work with Lizz - Elisabeth Malle
     description_html: >-
-      <p><strong>Photographer</strong> and <strong>Visual Content
-      Strategist</strong> from Albany. I work as a lifestyle, product, and
-      landscape photographer, creating images for a diverse range of requests,
-      from online media to printed artwork.</p>
+      <p>Du hast mich bei <strong>Goodbye Deutschland</strong> gesehen – und spürst, dass dich innerlich etwas dazu gebracht hat, nach mir zu googeln? Dann ruft dich das <strong>neue System</strong>.</p>
+      <br>
+      <p>
+        Viele Menschen haben mich gebeten, dieses <strong>neue System</strong> zugänglich zu machen.
+      </p><br>
+      <p>
+        Wir alle haben erlebt, was das alte System mit Menschen macht: <strong>ständiger Druck, endlose Diäten, Vergleiche und das Gefühl, nie genug zu sein</strong>. Wie du gesehen hast, war mein Leben auch nicht immer leicht. Im Gegenteil. Es war schwer und hat mich lange sehr müde gemacht.
+      </p>
+      <!-- <br>
+      <p>
+        Viele Menschen haben Angst vor der Zukunft, sie wollen endlich abnehmen, ihr volles Potenzial entwickeln – und genau dafür habe ich Online-Kurse erstellt. Darin zeige ich, wie mein eigener Weg ausgesehen hat und welche Schritte mir geholfen haben, ins neue System zu kommen.
+      </p> -->
+      <br>
+      <p>
+        Auf diesem Weg habe ich das <strong>omnitologische Arbeiten</strong> entwickelt – eine Methode, die durch <strong>IYSAK</strong> ein praxisnahes Gesicht bekommen hat und mit der ich bereits vielen Menschen helfen konnte.
+      </p>
+      <br>
+      <p>
+        Sie führt dich in ein Leben, in dem Körper, Seele und Alltag endlich zusammenpassen.
+      </p>
     image: /images/lizz_profil.jpg
     image_alt: Elisabeth Malle's picture
-    cta_button: Zu meinem Shop
+    cta_button: Zum neuen System
     cta_button_link: "https://iysak.com"
     works_button: Mein Newsletter
     works_button_link: "#newsletter"
+  
+  - _bookshop_name: content
+    content_html: >-
+      <h1 class="section__title">Hol dir jetzt deinen Start ins neue System</h1>
+      <ul>
+        <li>Erste Schritte <strong>raus aus dem alten System</strong></li>
+        <li>Rezepte und kleine Rituale, die dich <strong>ins neue System</strong> bringen</li>
+        <li>Übungen aus der <strong>IYSAK Methode</strong>, die dir zeigen: Veränderung ist möglich</li>
+      </ul>  
+
+    
   - _bookshop_name: testimonials-section
     title: Meine Kunden sagen
     description_html:
     show_testimonials: true
+
+  - _bookshop_name: content
+    content_html: >-
+      <h1 class="section__title">Jetzt starten</h1>
+      <p>
+        Die Wahl liegt bei dir: Bleibst du im alten System – oder <strong>beginnst du dein neues</strong>?<br>
+        Wir haben die <strong>IYSAK Methode</strong> entwickelt, damit du diesen Schritt gehen kannst.
+      </p>
+      <br>
+      <a href="https://iysak.com" class="cta-button c-button c-button--primary c-button--small">IYSAK – Die Sprache des neuen Systems</a>
+
+
   
   - _bookshop_name: newsletter
     newsletter_title: Mein Newsletter!
