--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -2,62 +2,52 @@
 title: Home
 content_blocks:
   - _bookshop_name: hero
-    title: Work with Lizz - Elisabeth Malle
+    title: Elisabeth Malle – bekannt aus „Goodbye Deutschland“
     description_html: >-
-      <p>Du hast mich bei <strong>Goodbye Deutschland</strong> gesehen – und spürst, dass dich innerlich etwas dazu gebracht hat, nach mir zu googeln? Dann ruft dich das <strong>neue System</strong>.</p>
+      <h2>Goodbye Old World. Hello New Life.</h2>
+      <p><strong>Lust, mit mir zu flüchten? Ich meine keine Flucht vor dem Leben, sondern eine Reise zu dir selbst.</strong></p>
       <br>
       <p>
-        Viele Menschen haben mich gebeten, dieses <strong>neue System</strong> zugänglich zu machen.
-      </p><br>
-      <p>
-        Wir alle haben erlebt, was das alte System mit Menschen macht: <strong>ständiger Druck, endlose Diäten, Vergleiche und das Gefühl, nie genug zu sein</strong>. Wie du gesehen hast, war mein Leben auch nicht immer leicht. Im Gegenteil. Es war schwer und hat mich lange sehr müde gemacht.
-      </p>
-      <!-- <br>
-      <p>
-        Viele Menschen haben Angst vor der Zukunft, sie wollen endlich abnehmen, ihr volles Potenzial entwickeln – und genau dafür habe ich Online-Kurse erstellt. Darin zeige ich, wie mein eigener Weg ausgesehen hat und welche Schritte mir geholfen haben, ins neue System zu kommen.
-      </p> -->
-      <br>
-      <p>
-        Auf diesem Weg habe ich das <strong>omnitologische Arbeiten</strong> entwickelt – eine Methode, die durch <strong>IYSAK</strong> ein praxisnahes Gesicht bekommen hat und mit der ich bereits vielen Menschen helfen konnte.
-      </p>
-      <br>
-      <p>
-        Sie führt dich in ein Leben, in dem Körper, Seele und Alltag endlich zusammenpassen.
+        Vielleicht kennst du dieses Gefühl, dass alles läuft, aber nichts sich lebendig anfühlt. Du funktionierst, machst weiter, lächelst und spürst doch, dass etwas fehlt. Ich kenne das. Ich war dort. Und genau deshalb gibt es heute IYSAK und die Omnitologie.
       </p>
     image: /images/lizz_profil.jpg
     image_alt: Elisabeth Malle's picture
-    cta_button: Zum neuen System
+    cta_button: Entdecke IYSAK
     cta_button_link: "https://iysak.com"
     works_button: Mein Newsletter
     works_button_link: "#newsletter"
-  
-  - _bookshop_name: content
-    content_html: >-
-      <h1 class="section__title">Hol dir jetzt deinen Start ins neue System</h1>
-      <ul>
-        <li>Erste Schritte <strong>raus aus dem alten System</strong></li>
-        <li>Rezepte und kleine Rituale, die dich <strong>ins neue System</strong> bringen</li>
-        <li>Übungen aus der <strong>IYSAK Methode</strong>, die dir zeigen: Veränderung ist möglich</li>
-      </ul>  
-
-    
-  - _bookshop_name: testimonials-section
-    title: Meine Kunden sagen
-    description_html:
-    show_testimonials: true
 
   - _bookshop_name: content
     content_html: >-
-      <h1 class="section__title">Jetzt starten</h1>
       <p>
-        Die Wahl liegt bei dir: Bleibst du im alten System – oder <strong>beginnst du dein neues</strong>?<br>
-        Wir haben die <strong>IYSAK Methode</strong> entwickelt, damit du diesen Schritt gehen kannst.
+        Ich bin Elisabeth Malle, geboren in Österreich, ausgebildet in Wirtschaft und Medizingerätemanagement, und seit Goodbye Deutschland kennst du vielleicht „meine Geschichte“. Ich lebe heute in Black Rock auf Tobago, dort, wo das Meer dich daran erinnert, wer du bist, wenn du beginnst, dich wieder zu fühlen.
+      </p>
+      <p>
+        Mein Weg war ein bewusster Aufbruch. Ich wollte das alte System hinter mir lassen, mit all seinem Druck, seinen Erwartungen und seiner ständigen Selbstoptimierung. Ich wollte leben, atmen, frei denken. Auf diesem Weg entstand die Omnitologie, eine Forschungsrichtung, die durch IYSAK ein Gesicht bekommen hat.
+      </p>
+      <p>
+        IYSAK ist (m)ein Erfahrungsweg. Es führt dich zurück zu dir selbst. Zu dem, was echt ist. Zu dem, was bleibt, wenn du aufhörst, dich zu überfordern.
+      </p>
+      <p>
+        Ich arbeite mit Menschen, die spüren, dass es Zeit ist, neu zu beginnen. Die sich nach Klarheit, Sinn und innerem Frieden sehnen. Menschen, die verstehen wollen, warum sie so oft erschöpft sind, obwohl sie so viel geben.
+      </p>
+      <p>
+        In meiner Arbeit verbinde ich wissenschaftliche Präzision mit menschlicher Tiefe. Ich erforsche, was dein Körper braucht, was deine Seele ruft und wie dein Alltag darauf reagiert. Daraus entsteht ein Weg, der zu dir passt und dich an deinen Ursprung erinnert.
+      </p>
+      <p>
+        Wenn du mich in „Goodbye Deutschland“ gesehen hast und etwas in dir berührt war, dann war das vielleicht der Moment, an dem das Neue dich gerufen hat.
+      </p>
+      <p>
+        IYSAK und die Omnitologie stehen für Klarheit, Bewusstsein und Rückverbindung.
+      </p>
+      <p>
+        <strong>Für ein Leben, das nicht mehr nur funktioniert, sondern fühlt.</strong>
       </p>
       <br>
-      <a href="https://iysak.com" class="cta-button c-button c-button--primary c-button--small">IYSAK – Die Sprache des neuen Systems</a>
+      <h2 class="section__title" style="text-align: center;">Willkommen im neuen System.</h2>
+      <h3 style="text-align: center;">Hier beginnt dein Weg zurück zu dir.</h3>
 
 
-  
   - _bookshop_name: newsletter
     newsletter_title: Mein Newsletter!
     newsletter_description: Bekomme Gedankenanregungen, Rabatte für meinen Shop und Update von mir immer mit!
@@ -65,4 +55,3 @@ content_blocks:
       frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3
     newsletter_button: Absenden
 ---
-
