update newsletter text

--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -14,7 +14,7 @@ content_blocks:
     image_alt: Elisabeth Malle's picture
     cta_button: Entdecke IYSAK
     cta_button_link: "https://iysak.com"
-    works_button: Mein Newsletter
+    works_button: Kostenlose Jahresausbildung
     works_button_link: "#newsletter"
 
   - _bookshop_name: content
@@ -44,12 +44,12 @@ content_blocks:
         <strong>Für ein Leben, das nicht mehr nur funktioniert, sondern fühlt.</strong>
       </p>
       <br>
-      <h2 class="section__title" style="text-align: center;">Willkommen im neuen System.</h2>
-      <h3 style="text-align: center;">Hier beginnt dein Weg zurück zu dir.</h3>
+      <h2>Willkommen im neuen System.</h2>
+      <h3>Hier beginnt dein Weg zurück zu dir.</h3>
 
 
   - _bookshop_name: newsletter
-    newsletter_title: Mein Newsletter!
+    newsletter_title: Nimm an der kostenlosen Jahresausbildung teil!
     newsletter_description: Bekomme Gedankenanregungen, Rabatte für meinen Shop und Update von mir immer mit!
     newsletter_identifier: >-
       frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3
