--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -2,7 +2,7 @@
 title: Home
 content_blocks:
   - _bookshop_name: hero
-    title: Elisabeth Malle – bekannt aus „Goodbye Deutschland“
+    title: Elisabeth Malle“
     description_html: >-
       <h2>Goodbye Old World. Hello New Life.</h2>
       <p><strong>Lust, mit mir zu flüchten? Ich meine keine Flucht vor dem Leben, sondern eine Reise zu dir selbst.</strong></p>
